--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "devDependencies": {
     "@babel/core": "^7.24.7",
+    "@babel/plugin-transform-runtime": "^7.24.7",
     "@babel/preset-env": "^7.24.7",
     "babel-loader": "^9.1.3",
     "css-loader": "^7.1.2",
@@ -19,6 +20,12 @@
     "eslint": "^9.6.0",
     "eslint-webpack-plugin": "^4.2.0",
     "html-webpack-plugin": "^5.6.0",
+    "image-minimizer-webpack-plugin": "^4.0.2",
+    "imagemin": "^9.0.0",
+    "imagemin-gifsicle": "^7.0.0",
+    "imagemin-jpegtran": "^7.0.0",
+    "imagemin-optipng": "^8.0.0",
+    "imagemin-svgo": "^11.0.1",
     "less": "^4.2.0",
     "less-loader": "^12.2.0",
     "mini-css-extract-plugin": "^2.9.0",
@@ -30,6 +37,8 @@
     "style-loader": "^4.0.0",
     "stylus": "^0.63.0",
     "stylus-loader": "^8.1.0",
+    "terser-webpack-plugin": "^5.3.10",
+    "thread-loader": "^4.0.2",
     "webpack": "^5.92.1",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^5.0.4"
